--- a/src/css/global.scss
+++ b/src/css/global.scss
@@ -1,129 +1,39 @@
-@import '../css/colors.scss';
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import '../css/design-system.scss';
 
-* {
-	-webkit-font-smoothing: antialiased;
-	outline: none;
-	margin: 0;
+// Animations
+@keyframes vibrate {
+	0% {
+		-webkit-transform: translate(0);
+		transform: translate(0);
+	}
+	20% {
+		-webkit-transform: translate(-2px, 2px);
+		transform: translate(-2px, 2px);
+	}
+	40% {
+		-webkit-transform: translate(-2px, -2px);
+		transform: translate(-2px, -2px);
+	}
+	60% {
+		-webkit-transform: translate(2px, 2px);
+		transform: translate(2px, 2px);
+	}
+	80% {
+		-webkit-transform: translate(2px, -2px);
+		transform: translate(2px, -2px);
+	}
+	100% {
+		-webkit-transform: translate(0);
+		transform: translate(0);
+	}
 }
 
-*,
-*::before,
-*::after {
-	box-sizing: border-box;
+.vibrate {
+	&:hover {
+		animation: vibrate 0.3s linear infinite both;
+	}
 }
 
 ::-webkit-scrollbar {
-	width: 0px; /* remove scrollbar space */
-	background: transparent; /* optional: just make scrollbar invisible */
-}
-
-html {
-	overflow-x: hidden;
-	pointer-events: all;
-	margin: 0;
-	padding: 0;
-	scroll-behavior: smooth;
-
-	// Default font size
-	font-size: 16px;
-}
-
-// Our main background colour
-body {
-	// Make sure no horizontal scroll
-	overflow-x: hidden;
-	// Reset position
-	position: relative;
-	margin: 0;
-	padding: 0;
-
-	// Default colours
-	background-color: $white;
-	color: black !important;
-
-	// Default font
-	font-family: 'Inter', sans-serif;
-}
-
-.container {
-	width: 60vw;
-	margin: 0 auto;
-
-
-	&_center {
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		min-height: 100vh;
-	}
-}
-
-// A row of buttons that provides some padding
-.button-row {
-	padding: 30px 0;
-	display: flex;
-	flex-direction: row;
-
-	gap: 0 30px;
-}
-
-// Buttons
-button {
-	// Base button class
-	&.btn {
-		cursor: pointer !important;
-
-		font-size: 0.83rem;
-		color: $black;
-		font-family: Inter;
-		font-weight: bold;
-		text-transform: uppercase;
-
-		align-items: center;
-		justify-content: center;
-		position: relative;
-		padding: 10px 25px;
-
-		border-radius: 4px;
-
-		transition: all 0.5s;
-		box-shadow: 0px 3px 6px 0px rgba($color: #000000, $alpha: 0.16);
-
-		// Button with solid background
-		&.btn-solid {
-			background-color: $primary;
-			color: $white;
-			outline: $primary;
-			border: solid 1.5px $primary;
-
-			&:hover {
-				background-color: $secondary;
-				border: solid 1.5px $secondary;
-			}
-
-			&.selected {
-				background-color: $secondary;
-				border: solid 1.5px $secondary;
-			}
-		}
-
-		// Button with outline
-		&.btn-outline {
-			background-color: transparent;
-			border: solid 1.5px $primary;
-
-			&:hover {
-				color: $white;
-				background-color: $secondary;
-				border: solid 1.5px $secondary;
-			}
-
-			&.selected {
-				background-color: $secondary;
-				outline: none;
-				border: none;
-			}
-		}
-	}
+	display: none;
 }
