First ready version!

--- a/components/navigation/Nav.module.scss
+++ b/components/navigation/Nav.module.scss
@@ -43,6 +43,10 @@
     
                 a {
                     color: $onyx;
+
+                    &:hover {
+                        color: gray;
+                    }
                 }
     
                 // Make first element on left (logo)
