--- a/components/project/ProjectCard.module.scss
+++ b/components/project/ProjectCard.module.scss
@@ -3,19 +3,50 @@
     color: $white;
 
     border-radius: 10px;
-    padding: 1rem;
+    padding: 1.6rem;
 
     width: 100%;
-    min-height: rem(200);
+    position: relative;
 
     display: flex;
     justify-content: space-between;
+    flex-direction: column;
+    flex: 1;
+    flex-basis: 40%;
 
-    .left {
-        flex: 1;
+	@include sm {
+        flex-basis: 60%;
     }
 
-    .right {
-        flex: 1;
+    .title {
+        margin-bottom: rem(10);
+    }
+
+    .skills {
+        display: flex;
+        flex-direction: row;
+        gap: rem(10);
+        margin-top: rem(7);
+    }
+
+	span {
+		margin-top: 25%;
+	}
+
+    .links {
+        padding-top: 1.6rem;
+        display: flex;
+        justify-content: flex-start;
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: rem(20);
+        width: 100%;
+
+        button {
+            border-radius: 10px;
+            background: $primary-300;
+			color: $primary-200;
+            padding: rem(8) rem(16);
+        }
     }
 }
