Add fluid scaling + fixes

--- a/styles/design-system.scss
+++ b/styles/design-system.scss
@@ -252,7 +252,7 @@ a {
 // Hover animation for links
 .link {
     transition: 200ms ease-in-out;
-    
+
     &:hover {
         color: $primary-200;
     }
@@ -326,16 +326,13 @@ html {
     padding: 0;
     scroll-behavior: smooth;
 
-    font-size: 16px;
-
-    @include xl {
-        font-size: 16px;
-    }
-
-    @include lg {
-        font-size: 14px;
-    }
+    font-size: 1.125rem;
 }
+
+// Dynamic screen scaling
+@media screen and (max-width:1920px) { html { font-size: calc(0.625rem + 0.41666666666666674vw); } }
+@media screen and (max-width:1440px) { html { font-size: calc(0.8126951092611863rem + 0.20811654526534862vw); } }
+@media screen and (max-width:479px) { html { font-size: calc(0.7494769874476988rem + 0.8368200836820083vw); } }
 
 body {
     // Make sure no horizontal scroll
