--- a/styles/design-system.scss
+++ b/styles/design-system.scss
@@ -5,6 +5,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 
 // Util Functions
@@ -230,7 +231,7 @@
 
 // Main typography selectors
 h1 {
-    @include heading-1;
+    @include display-1;
 }
 
 h2 {
@@ -300,7 +301,6 @@ a {
     -webkit-font-smoothing: antialiased;
     outline: none;
     margin: 0;
-    font-family: $font-1;
 }
 
 *,
