Updates and restructure design-system

--- a/design-system/design-system-utils.scss
+++ b/design-system/design-system-utils.scss
@@ -30,6 +30,8 @@ $spacing-8: rem(40);
 $spacing-9: rem(48);
 $spacing-10: rem(56);
 $spacing-11: rem(64);
+$spacing-12: rem(128);
+$spacing-13: rem(256);
 
 /*
 * Breakpoints
