--- a/design-system/design-system.scss
+++ b/design-system/design-system.scss
@@ -47,6 +47,11 @@
     box-sizing: border-box;
 }
 
+// Anchor text reset
+a {
+    color: black;
+}
+
 // Styling of text selection
 ::-moz-selection,
 ::selection {
