--- a/design-system/button/text-button/text-button.module.scss
+++ b/design-system/button/text-button/text-button.module.scss
@@ -1,6 +1,6 @@
 .baseButton {
     padding: $spacing-1 $spacing-4;
-    border-radius: $border-radius;
+    border-radius: $border-radius-sm;
     border: 1px solid transparent;
     cursor: pointer;
     width: fit-content;
