--- a/design-system/button/default/button.module.scss
+++ b/design-system/button/default/button.module.scss
@@ -1,7 +1,7 @@
 // Base button styling
 .baseButton {
     padding: $spacing-2 $spacing-4;
-    border-radius: $border-radius;
+    border-radius: $border-radius-sm;
     border: 1px solid transparent;
     cursor: pointer;
     width: fit-content;
