--- a/design-system/button/icon-button/icon-button.module.scss
+++ b/design-system/button/icon-button/icon-button.module.scss
@@ -1,6 +1,6 @@
 .baseButton {
     padding: $spacing-2;
-    border-radius: $border-radius;
+    border-radius: $border-radius-sm;
     cursor: pointer;
     width: fit-content;
     height: fit-content;
@@ -22,7 +22,8 @@
         color: var(--neutral600);
     }
 
-    &:focus, &:active {
+    &:focus,
+    &:active {
         border: 1px solid var(--neutral300);
     }
 }
