--- a/design-system/design-system-utils.scss
+++ b/design-system/design-system-utils.scss
@@ -18,7 +18,9 @@
 /**
 * Design System Constants (from JS)
 */
-$border-radius: 4px;
+$border-radius-sm: 4px;
+$border-radius-md: 8px;
+$border-radius-lg: 12px;
 $spacing-1: rem(4);
 $spacing-2: rem(8);
 $spacing-3: rem(12);
