Rework button components

--- a/design-system/design-system.scss
+++ b/design-system/design-system.scss
@@ -35,7 +35,7 @@
     font: inherit;
 
     // Base theme easing
-    transition: background-color 200ms ease-in-out;
+    // transition: background-color 200ms ease-in-out;
 
     vertical-align: baseline;
 }
