--- a/pages/contact/contact.module.scss
+++ b/pages/contact/contact.module.scss
@@ -19,4 +19,8 @@
     display: flex;
     flex-direction: column;
     gap: $spacing-4;
+
+    &__submit {
+        margin-top: $spacing-6;
+    }
 }
