--- a/pages/about/about.module.scss
+++ b/pages/about/about.module.scss
@@ -13,15 +13,32 @@
 
 .backgroundInfo {
     width: 60%;
+
+    @include md {
+        width: 100% !important;
+    }
 }
 
 .backgroundProfile {
     width: 30%;
+
+    @include md {
+        justify-content: center !important;
+        width: 100% !important;
+        padding: $spacing-9;
+    }
+}
+
+.backgroundSection {
+    @include md {
+        flex-direction: column !important;
+        justify-content: flex-start !important;
+    }
 }
 
 .imageContainer {
-    width: 100%;
-    height: 70%;
+    width: rem(300);
+    height: rem(300);
     position: relative;
 }
 
@@ -34,22 +51,30 @@
 
 .skillsWrapper {
     max-width: 95%;
+
+    @include md {
+        max-width: 100% !important;
+    }
 }
 
 .aboutCta {
     text-align: center;
 
-    background-image: url('/resume-download-background.webp');
-    background-size: cover;
-    // background: linear-gradient(
-    //     to bottom right,
-    //     rgb(var(--secondary500RGB)),
-    //     rgb(var(--secondary600RGB))
-    // );
+    // background-image: url('/resume-download-background.webp');
+    // background-size: cover;
+    background: linear-gradient(
+        to bottom right,
+        rgb(var(--secondary800RGB)),
+        rgb(var(--secondary900RGB))
+    );
 
     @include hover-shadow;
 
     &__button {
         width: 30%;
+    }
+
+    &__title {
+        width: 80%;
     }
 }
