--- a/pages/contact/contact.module.scss
+++ b/pages/contact/contact.module.scss
@@ -15,6 +15,7 @@
     width: 60%;
 
     margin-top: $spacing-11;
+    margin-bottom: $spacing-10;
 
     display: flex;
     flex-direction: column;
