--- a/design-system/modal/body/modal-body.module.scss
+++ b/design-system/modal/body/modal-body.module.scss
@@ -21,7 +21,7 @@
 
     /* Handle */
     &::-webkit-scrollbar-thumb {
-        border-radius: $border-radius;
+        border-radius: $border-radius-lg;
         background: var(--neutral200);
     }
 
