--- a/design-system/design-system.scss
+++ b/design-system/design-system.scss
@@ -101,7 +101,7 @@ body {
     padding: 0;
 
     // JS hack set height to visible viewport (fixes mobile)
-    height: 100%;
+    // height: 100%;
     min-height: var(--vh);
 
     // Default colours
