--- a/design-system/input/checkbox/checkbox.module.scss
+++ b/design-system/input/checkbox/checkbox.module.scss
@@ -5,7 +5,7 @@
 
     padding: 0.5rem;
 
-    border-radius: $border-radius;
+    border-radius: $border-radius-sm;
     border: 1px solid var(--neutral300);
     background: transparent;
 
