--- a/design-system/modal/footer/modal-footer.module.scss
+++ b/design-system/modal/footer/modal-footer.module.scss
@@ -1,4 +1,4 @@
 .modalFooter {
     border-top: 1px solid var(--neutral100);
-    border-radius: 0 0 $border-radius $border-radius;
+    border-radius: 0 0 $border-radius-sm $border-radius-sm;
 }
