--- a/design-system/modal/header/modal-header.module.scss
+++ b/design-system/modal/header/modal-header.module.scss
@@ -1,4 +1,4 @@
 .modalHeader {
     border-bottom: 1px solid var(--neutral100);
-    border-radius: $border-radius $border-radius 0 0;
+    border-radius: $border-radius-sm $border-radius-sm 0 0;
 }
