--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -1,3 +1,9 @@
+@keyframes move-bg {
+    to {
+        background-position: var(--bg-size) 0;
+    }
+}
+
 .gradient__bg {
     background: linear-gradient(
         to right,
@@ -25,13 +31,23 @@
     }
 
     &__highlight {
-        @include text-gradient;
+        --bg-size: 400%;
+        --color1: #2eaef6;
+        --color2: #7a88d3;
+        --color3: #d47aff;
 
-        background-image: linear-gradient(
-            to right,
-            var(--primary600),
-            var(--secondary700)
-        );
+        background: linear-gradient(
+                to right,
+                var(--color1),
+                var(--color2),
+                var(--color3),
+                var(--color1)
+            )
+            0 0 / var(--bg-size) 100%;
+
+        animation: move-bg 8s infinite linear;
+
+        @include text-gradient;
     }
 
     @include lg {
