--- a/components/navigation/main-nav/main-nav.module.scss
+++ b/components/navigation/main-nav/main-nav.module.scss
@@ -3,7 +3,7 @@
 
     background-image: linear-gradient(
         to right,
-        var(--tertiary700),
+        var(--primary700),
         var(--secondary700)
     );
 }
