--- a/pages/contact/contact.module.scss
+++ b/pages/contact/contact.module.scss
@@ -6,7 +6,7 @@
 
     background: linear-gradient(
         to bottom,
-        rgb(var(--tertiary100RGB)),
+        rgb(var(--secondary100RGB)),
         rgba(#ffffff, 0)
     );
 }
