--- a/components/navigation/main-nav/main-nav.module.scss
+++ b/components/navigation/main-nav/main-nav.module.scss
@@ -7,3 +7,11 @@
         var(--secondary700)
     );
 }
+
+.link {
+    transition: 0.25s ease-in-out;
+
+    &:hover {
+        color: var(--primary500);
+    }
+}
